--- a/style.scss
+++ b/style.scss
@@ -72,4 +72,5 @@ License: GNU General Public License v2 or later
 ============================================================================ */
 
 @import "scss/module/top/_keyvisual.scss";
+@import "scss/module/top/_preview-info.scss";
 
