--- a/style.scss
+++ b/style.scss
@@ -50,10 +50,12 @@ License: GNU General Public License v2 or later
 @import "scss/layout/_footer.scss";
 @import "scss/layout/_top.scss";
 @import "scss/layout/_archive.scss";
+@import "scss/layout/_archive-gallery.scss";
 @import "scss/layout/_single.scss";
 @import "scss/layout/_post.scss";
 @import "scss/layout/_container.scss";
 @import "scss/layout/_keyvisual.scss";
+@import "scss/layout/_company.scss";
 @import "scss/layout/_contact.scss";
 @import "scss/layout/_privacy.scss";
 @import "scss/layout/_404.scss";
